# AI_sentiment_MVP

./: .gitignore  README.md  app.py  config.py  pyproject.toml  requirements.txt  streamlit_app.py  styles.css
app/controllers/: analysis_controller.py
app/core/: config.py  helpers.py
app/services/: analysis_service.py  chart_service.py  file_service.py  sentiment_service.py  tiktok_scraper_service.py
app/ui/: components.py  state.py  styles.py
charts/: chart_service.py
db/: database.py  models.py
db/repositories/: analysis_result_repository.py  analysis_run_repository.py  comment_repository.py  sentiment_repository.py  video_repository.py
playwright_profile/: Local State  SingletonCookie  SingletonLock  SingletonSocket  first_party_sets.db
playwright_profile/Default/: Cookies  DIPS  DIPS-wal  Favicons  History  Network Action Predictor  Network Persistent State  Preferences  Reporting and NEL  Secure Preferences  Top Sites  TransportSecurity  Web Data
playwright_profile/Default/DawnGraphiteCache/: data_1  index
playwright_profile/Default/DawnWebGPUCache/: data_1  index
playwright_profile/Default/Extension Rules/: LOG  LOG.old
playwright_profile/Default/Extension Scripts/: LOG  LOG.old
playwright_profile/GrShaderCache/: data_1  index
playwright_profile/GraphiteDawnCache/: data_0  data_1  data_2  index
playwright_profile/ShaderCache/: data_1  index
playwright_profile/segmentation_platform/: ukm_db
services/: analysis_service.py  file_service.py  sentiment_analysis.py  tiktok_scraper_service.py
tests/: test_analysis_service.py
(+9178 files in other folders)
